# OntoMCP

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/ontomcp/: __init__.py
src/ontomcp/api/: main.py  responses.py
src/ontomcp/api/routes/: __init__.py  bulk.py  graph.py  health.py  hierarchy.py  search.py  suggest.py  terms.py
src/ontomcp/core/: __init__.py  cache.py  config.py  logging.py  ols_client.py
src/ontomcp/core/tools/: __init__.py  _common.py  bulk.py  graph.py  hierarchy.py  mapping.py  search.py  suggest.py  term.py
src/ontomcp/jupyter_ext/: __init__.py  client.py  graph.py  magic.py  panel.py
src/ontomcp/mcp_server/: server.py
tests/: conftest.py  test_api.py  test_cache.py  test_entrypoints.py  test_jupyter_client.py  test_jupyter_panel.py  test_logging.py  test_mcp_server.py  test_ols_client.py  test_scaffold.py  test_tools.py
