[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ontomcp"
version = "0.1.0"
description = "Ontology grounding for pharma and biotech scientists, as an MCP server and Jupyter extension."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jean-Louis Honeine", email = "jeanlouis.honeine@gmail.com" }]
keywords = ["ontology", "mcp", "bioinformatics", "pharma", "jupyter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
jupyter = [
    "ipywidgets>=8.0",
    "ipycytoscape>=1.3",
    "pandas>=2.0",
    "ipython>=8.0",
    "jupyterlab>=4.5.8",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
ontomcp-mcp = "ontomcp.mcp_server.server:run"
ontomcp-api = "ontomcp.api.main:run"

[project.urls]
Homepage = "https://github.com/jeanlouishoneine-tech/OntoMCP"
Repository = "https://github.com/jeanlouishoneine-tech/OntoMCP"
Issues = "https://github.com/jeanlouishoneine-tech/OntoMCP/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ontomcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require network access to the OLS API (deselect with '-m \"not integration\"')",
]
